vpc.tf
resource "aws_vpc" "main" {
  cidr_block = var.vpc_cidr

  enable_dns_support = true
  enable_dns_hostnames = true

  assign_generated_ipv6_cidr_block = false
  tags = {
    Name = "${var.project_name}-vpc"
  }
}

resource "aws_vpc_ipv4_cidr_block_association" "main" {

count = length(var.vpc_additional_cidrs)
vpc_id = aws_vpc.main.id
  cidr_block = var.vpc_additional_cidrs[count.index]
}

resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.main.id
  tags = {
    Name = "${var.project_name}-igw"
  }
}


resource "aws_subnet" "public" {
  count = length(var.public_subnets)
  vpc_id = aws_vpc.main.id
  cidr_block = var.public_subnets[count.index].cidr
  availability_zone = var.public_subnets[count.index].availability_zone
  map_public_ip_on_launch = true

  tags = {
    Name = var.public_subnets[count.index].name
  }

  depends_on = [ 
    aws_vpc_ipv4_cidr_block_association.main
   ]
}

resource "aws_route_table" "public_internet_access" {
  vpc_id = aws_vpc.main.id

  tags = {
  Name = "${var.project_name}-public-access"
  }
}

resource "aws_route" "public" {
  route_table_id = aws_route_table.public_internet_access.id
  destination_cidr_block = "0.0.0.0/0"

  gateway_id = aws_internet_gateway.igw.id
}

resource "aws_route_table_association" "public" {
  count = length(var.public_subnets)

  subnet_id = aws_subnet.public[count.index].id
  route_table_id = aws_route_table.public_internet_access.id
  
}

resource "aws_eip" "eip" {
  count = length(var.public_subnets)

  domain = "vpc"

  tags = {
    Name = format("%s-%s", var.project_name, var.public_subnets[count.index].availability_zone)
  }
}

resource "aws_nat_gateway" "main"{
  count = length(var.public_subnets)

  allocation_id = aws_eip.eip[count.index].id
  subnet_id = aws_subnet.public[count.index].id

  tags = {
         Name = format("%s-%s", var.project_name, var.public_subnets[count.index].availability_zone)
  }
}

#Recursos subnet private

resource "aws_subnet" "private" {
  count = length(var.private_subnets)
  vpc_id = aws_vpc.main.id
  cidr_block = var.private_subnets[count.index].cidr
  availability_zone = var.private_subnets[count.index].availability_zone


  tags = {
    Name = var.private_subnets[count.index].name
  }

  depends_on = [ 
    aws_vpc_ipv4_cidr_block_association.main
   ]
}

resource "aws_route_table" "private" {
  count = length(var.private_subnets)
  vpc_id = aws_vpc.main.id

tags = {
         Name = format("%s-%s", var.project_name, var.private_subnets[count.index].availability_zone)
  }
}

resource "aws_route" "private" {
  count = length(var.private_subnets)

  route_table_id          = aws_route_table.private[count.index].id
  destination_cidr_block  = "0.0.0.0/0"

  nat_gateway_id = aws_nat_gateway.main[
    index(
      var.public_subnets[*].availability_zone,
      var.private_subnets[count.index].availability_zone
    )
  ].id
}

resource "aws_route_table_association" "private"{
  count = length(var.private_subnets)
  subnet_id = aws_subnet.private[count.index].id
  route_table_id= aws_route_table.private[count.index].id
}
